substrate/frame/revive/ui-tests/src/ui/precompiles_ui.stderr
warning: unused import: `alloy_core::sol_types::SolInterface`
 --> src/ui/precompiles_ui.rs
  |
  | use alloy_core::sol_types::SolInterface;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0080]: evaluation panicked: Precompiles with duplicate matcher detected
 --> $WORKSPACE/substrate/frame/revive/src/precompiles.rs
  |
  |             panic!("Precompiles with duplicate matcher detected")
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<(PrecompileA<ui_tests::runtime::Runtime>, PrecompileB<ui_tests::runtime::Runtime>) as polkadot_sdk::pallet_revive::precompiles::Precompiles<ui_tests::runtime::Runtime>>::CHECK_COLLISION` failed here

note: erroneous constant encountered
   --> $WORKSPACE/substrate/frame/revive/src/precompiles.rs
    |
    |     let _ = <Tuple as Precompiles<T>>::CHECK_COLLISION;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
